--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -10,11 +10,12 @@ p {
     text-align: center;
     font-family: $lato;
 }
+
 .container {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    max-height: 1200px;
+    max-width: 1200px;
 }
 //headings
 h1 {
@@ -196,7 +197,6 @@ hr {
     width: 250px;
     height: 250px;
     margin: 20px;
-    object-fit: cover;
     filter: grayscale(70%);
     padding: 25px;
 }
@@ -205,7 +205,8 @@ hr {
     width: 200px;
     height: 200px;
     margin: 20px;
-    object-fit: cover;
+//    object-fit: cover;
+        object-position: 50% 50%;
     filter: grayscale(70%);
     //    padding: 25px;
     display: inline-block;
