--- a/projects/flywithus/sass/partials/_base.scss
+++ b/projects/flywithus/sass/partials/_base.scss
@@ -32,12 +32,11 @@ a {
     &:hover {
         color: $purple;
         transition: 0.3s;
-        color: #992e5e;
     }
 }
 p {
     font-family: $opensans;
-    color: #323232;
+    color: $darkgrey;
     font-size: 1.2rem;
     text-align: center;
     padding: 0 30px 30px;
@@ -93,7 +92,6 @@ header {
         display: none;
     }
 }
-
 // nav - mobile
 @media (max-width: 768px) {
     header {
@@ -142,7 +140,7 @@ header {
 .visible {
     display: block;
 }
-h3.strike {
+.strike {
     position: relative;
     overflow: hidden;
     width: 100%;
@@ -150,32 +148,32 @@ h3.strike {
     margin: 0 auto;
     color: $purple;
     font-size: 3rem;
+    span {
+        display: inline-block;
+        vertical-align: baseline;
+        zoom: 1;
+        *display: inline;
+        *vertical-align: auto;
+        position: relative;
+        padding: 0 20px;
+        &:before,
+        &:after {
+            content: '';
+            display: block;
+            width: 1000px;
+            position: absolute;
+            top: 0.73em;
+            border-top: 3px solid $purple;
+        }
+        &:before {
+            right: 100%;
+        }
+        &:after {
+            left: 100%;
+        }
+    }
 }
-h3.strike span {
-    display: inline-block;
-    vertical-align: baseline;
-    zoom: 1;
-    *display: inline;
-    *vertical-align: auto;
-    position: relative;
-    padding: 0 20px;
-}
-h3.strike span:before,
-h3.strike span:after {
-    content: '';
-    display: block;
-    width: 1000px;
-    position: absolute;
-    top: 0.73em;
-    border-top: 3px solid $purple;
-}
-h3.strike span:before {
-    right: 100%;
-}
-h3.strike span:after {
-    left: 100%;
-}
-// panel - flights
+// PANEL - flights
 .panel {
     background-color: $purple;
     box-shadow: 0px 30px 69.16px 6.84px rgba(4, 4, 4, 0.4);
@@ -184,17 +182,16 @@ h3.strike span:after {
     margin: 0 auto;
     text-align: center;
     margin-top: -50px;
-    display: flex;
+    @include flex;
     justify-content: space-between;
     align-content: space-between;
     @media (max-width: 768px) {
         margin-top: -150px;
-//        width: 80%;
     }
 }
 form {
     padding: 30px 0 30px 30px;
-    display: flex;
+    @include flex;
     justify-content: space-between;
     align-items: baseline;
     margin: 0 auto;
@@ -213,7 +210,6 @@ form {
         text-align: left;
         padding: 5px;
         flex-direction: column;
-        
     }
 }
 input[type=text] {
@@ -242,7 +238,7 @@ input[type=text] {
     }
 }
 input[type=search] {
-    border: 1px solid lightgrey;
+    border: 2px solid lightgrey;
     padding: 10px;
     transition: all 0.4s ease-in-out;
     &:focus {
@@ -304,7 +300,7 @@ input[type=text]:focus {
 }
 .btn-send {
     background-color: rgb(105, 21, 122);
-    box-shadow: 0px 30px 69.16px 6.84px rgba(4, 4, 4, 0.4);
+    box-shadow: -20px 0px 31px -9px rgba(0, 0, 0, 0.25);
     min-width: 50px;
     border: none;
     > img {
@@ -319,12 +315,12 @@ input[type=text]:focus {
     font-size: 5em;
     font-weight: 100;
     @media screen and (max-width: 768px) {
+        font-size: 2rem;
         padding: 40px 0;
     }
 }
-
 .icons {
-    display: flex;
+    @include flex;
     justify-content: space-between;
     align-content: space-between;
 }
@@ -367,182 +363,11 @@ input[type=text]:focus {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    -webkit-box-shadow: inset 2px 177px 34px -148px rgba(0, 0, 0, 0.34);
-    -moz-box-shadow: inset 2px 177px 34px -148px rgba(0, 0, 0, 0.34);
     box-shadow: inset 2px 177px 34px -148px rgba(0, 0, 0, 0.34);
 }
-//testimonials
-.testimonial {
-    display: inline-block;
-    img {
-        height: 200px;
-    }
-}
-.slider {
-    margin: 0 auto;
-    text-align: center;
-    div {
-        vertical-align: middle;
-        display: inline-block;
-        margin: 20px;
-        img {
-            height: 200px;
-            width: 200px;
-        }
-    }
-    .slide-prev {
-        background-image: url(../images/gallery-1.png);
-        background-size: cover;
-        width: 400px;
-        height: 500px;
-    }
-    .slide-center {
-        background-image: url(../images/gallery-2.png);
-        background-size: cover;
-        width: 350px;
-        height: 500px;
-        text-align: center;
-        position: relative;
-        border: 10px solid lightgray;
-    }
-    .slide-next {
-        background-image: url(../images/gallery-3.png);
-        background-size: cover;
-        width: 400px;
-        height: 500px;
-    }
-    .quote {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        margin: 40px 40px 10px 40px;
-        padding: 20px;
-        background-color: white;
-        //padding: 20px;
-        // text-align: center;
-        p {
-            font-size: 12px;
-            padding: 0;
-        }
-        img {
-            width: 100px;
-            height: auto;
-            margin-top: -100px;
-        }
-        span {
-            font-size: 45px;
-            font-family: $playfair;
-        }
-    }
-}
-// modal-different 
-.modalDialog {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.8);
-    z-index: 99999;
-    opacity: 0;
-    -webkit-transition: opacity 400ms ease-in;
-    -moz-transition: opacity 400ms ease-in;
-    transition: opacity 400ms ease-in;
-    pointer-events: none;
-}
-.modalDialog:target {
-    opacity: 1;
-    pointer-events: auto;
-}
-.modalDialog > div {
-    width: 80%;
-//    height: 90%;
-    position: relative;
-    margin: 7% auto;
-//    padding: 5px 20px 13px 20px;
-    background: #fff;
-    border: 10px solid #ebebeb;
-}
 
-.modal-wrap {
-    display: flex;
-    justify-content: space-between;
-//    align-content: space-between;
-    @media (max-width: 768px) {
-            flex-direction: column;
-        }
-    h2 {
-        font-family: $playfair;
-        font-size: 3em;
-        font-weight: 100;
-    }
-    .modal-inner {
-        height: 70%;
-//        overflow: scroll;
-    }
-    
-    p {
-        color: #787878;
-        font-size: 12px;
-        text-align: justify;
-        padding: 20px;
-//        @media (max-width: 768px) {
-//            overflow: scroll;
-//        }
-    }
-    img {
-//        margin: 20px;
-        float: left;
-        padding: 20px;
-        width: 100%;
-        min-width: 300px;
-        height: 100%;
-        object-fit: cover;
-        @media screen and (max-width: 768px) {
-           max-height: 250px;
-        }
-       
-    }
-     .btn-more {
-        float: right;
-        margin: 20px;
-        }
-}
-.close {
-    background: $purple;
-    color: #fff;
-    line-height: 45px;
-    position: absolute;
-    right: -25px;
-    text-align: center;
-    top: -25px;
-    width: 44px;
-    text-decoration: none;
-    font-weight: bold;
-    -webkit-border-radius: 22px;
-    -moz-border-radius: 22px;
-    border-radius: 22px;
-}
-.close:hover {
-    background: #fff;
-    color: $purple;
-    border: 1px solid $purple;
-}
-.quote-sign {
-    color: $purple;
-    text-align: center;
-    font-size: 5rem;
-    margin: 0 auto;
-    font-weight: bold;
-}
-.quote-big {
-    font-size: 3rem;
-    font-family: $playfair;
-    color: #9f9e9e;
-    text-align: center;
-    font-weight: 100;
-    padding-bottom: 50px;
-}
+
+// POPULAR DESTINATIONS
 .city-outer {
     display: inline-block;
     margin: 30px 40px;
@@ -551,7 +376,7 @@ input[type=text]:focus {
     }
     transition: 0.4s;
     &:hover {
-        .city-img{
+        .city-img {
             transform: rotate(-10deg);
             transition: 0.4s;
         }
@@ -560,7 +385,6 @@ input[type=text]:focus {
             transition: 0.4s;
         }
     }
-    
     h4 {
         text-align: center;
         text-transform: uppercase;
@@ -580,10 +404,7 @@ input[type=text]:focus {
     height: 200px;
     background-color: #ebebeb;
     transition: 0.4s;
-    -webkit-box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
-    -moz-box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
     box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
-    
 }
 .city-img2 {
     position: absolute;
@@ -591,10 +412,8 @@ input[type=text]:focus {
     left: 0;
     width: 200px;
     height: 200px;
-    transition: 0.4s;
     background-color: #ebebeb;
-    -webkit-box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
-    -moz-box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
+    transition: 0.4s;
     box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
 }
 .city-img3 {
@@ -604,11 +423,9 @@ input[type=text]:focus {
     width: 200px;
     height: 200px;
     background-color: #ebebeb;
-    -webkit-box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
-    -moz-box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
+    transition: 0.4s;
     box-shadow: 2px 2px 3px 1px rgba(214, 214, 214, 1);
-    
-    // MODAL BOXES
+    // MODAL BOXES - small boxes
     .ny {
         background-image: url(../images/ny.jpg);
         background-size: cover;
@@ -663,4 +480,171 @@ input[type=text]:focus {
         padding: 20px;
         border: 10px solid #ebebeb;
     }
+}
+
+// modal box 
+.modalDialog {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 99999;
+    opacity: 0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+}
+.modalDialog:target {
+    opacity: 1;
+    pointer-events: auto;
+}
+.modalDialog > div {
+    width: 80%;
+    position: relative;
+    margin: 7% auto;
+    background: #fff;
+    border: 10px solid #ebebeb;
+}
+.modal-wrap {
+    @include flex;
+    justify-content: space-between;
+    @media (max-width: 768px) {
+        flex-direction: column;
+    }
+    h2 {
+        font-family: $playfair;
+        font-size: 3em;
+        font-weight: 100;
+    }
+    .modal-inner {
+        height: 70%;
+    }
+    p {
+        color: #787878;
+        font-size: 12px;
+        text-align: justify;
+        padding: 20px;
+    }
+    img {
+        float: left;
+        padding: 20px;
+        width: 100%;
+        min-width: 300px;
+        height: 100%;
+        object-fit: cover;
+        @media screen and (max-width: 768px) {
+            max-height: 250px;
+        }
+    }
+    .btn-more {
+        float: right;
+        margin: 20px;
+    }
+}
+.close {
+    background: $purple;
+    color: #fff;
+    line-height: 45px;
+    position: absolute;
+    right: -25px;
+    text-align: center;
+    top: -25px;
+    width: 44px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 22px;
+}
+.close:hover {
+    background: #fff;
+    color: $purple;
+    border: 1px solid $purple;
+}
+// SLIDER
+
+//slides
+.slide-1 {
+    background-image: url(https://s15.postimg.org/5760uxoqj/food_vacation_boats_lunch.jpg);
+    background-size: cover;
+    height: 500px;
+}
+.slide-2 {
+    background-image: url(https://s12.postimg.org/e2er9be59/gallery_1.png);
+    background-size: cover;
+    height: 500px;
+}
+.slide-3 {
+    background-image: url(https://s12.postimg.org/rklnllqal/gallery_2.png
+);
+    background-size: cover;
+    height: 500px;
+}
+.slide-4 {
+    background-image: url(https://s12.postimg.org/sbedrdsnx/gallery_3.png);
+    background-size: cover;
+    height: 500px;
+}
+
+//quote inside slides
+.quote {
+    margin: 20px;
+    padding: 10px;
+    background-color: white;
+    text-align: center;
+    margin-top: 100px;
+    @include flex;
+    justify-content: center;
+    .quote-inner {
+        align-content: flex-end;
+    }
+    p {
+        font-size: 12px;
+        padding: 10px;
+        margin: 10px;
+    }
+    img {
+        align-content: center;
+        width: 100px;
+        height: 100px;
+        margin: 0 auto;
+        margin-top: -50px;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+    .up-quo {
+        font-size: 45px;
+        float: left;
+    }
+    .down-quo {
+        font-size: 45px;
+        float: right;
+    }
+}
+.slick-slide {
+    border: 10px solid white;
+    margin: 10px;
+    outline: 0;
+}
+.slick-current {
+    border: 10px solid #b3b3b3;
+    box-shadow: 0px 0px 10px 1px $shadow;
+}
+
+// BIG QUOTE
+.quote-sign {
+    color: $purple;
+    text-align: center;
+    font-size: 5rem;
+    margin: 0 auto;
+    font-weight: bold;
+}
+.quote-big {
+    font-size: 3rem;
+    font-family: $playfair;
+    color: #9f9e9e;
+    text-align: center;
+    font-weight: 100;
+    padding-bottom: 50px;
 }
