--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -17,6 +17,11 @@ p {
     text-align: center;
     max-width: 1200px;
 }
+
+.hideme
+{
+    opacity:0;
+}
 //headings
 h1 {
     font-family: $old;
